// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`call constant function > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [],
    "instruction": "loop",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "getFortyTwo",
      },
    ],
    "instruction": "call",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 6,
  },
  {
    "arguments": [],
    "instruction": "loopEnd",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 9,
  },
]
`;

exports[`call constant function > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (type (;1;) (func (param i32) (result i32)))
  (type (;2;) (func (param i32 i32) (result i32)))
  (type (;3;) (func (result i32)))
  (import "js" "memory" (memory (;0;) 1 1))
  (func (;0;) (type 0)
    call 6)
  (func (;1;) (type 0)
    call 5)
  (func (;2;) (type 0))
  (func (;3;) (type 0)
    (local i32)
    i32.const 128
    local.set 0
    loop  ;; label = @1
      call 1
      local.get 0
      i32.const 1
      i32.sub
      local.set 0
      local.get 0
      br_if 0 (;@1;)
    end)
  (func (;4;) (type 3) (result i32)
    i32.const 42)
  (func (;5;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          i32.const 8
          i32.const 3
          i32.store
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 4
        call 4
        i32.store
        br 0 (;@2;)
      end
    end)
  (func (;6;) (type 0)
    i32.const 8
    i32.const -1
    i32.store)
  (export "init" (func 0))
  (export "cycle" (func 1))
  (export "initOnly" (func 2))
  (export "buffer" (func 3)))
"
`;

exports[`call constant function > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__loopErrorSignaler": {
    "byteAddress": 8,
    "default": -1,
    "elementWordSize": 4,
    "id": "__loopErrorSignaler",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`call float64-returning function > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "float64",
    "lineNumber": 1,
  },
  {
    "arguments": [],
    "instruction": "loop",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "getDoublePI",
      },
    ],
    "instruction": "call",
    "lineNumber": 5,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 6,
  },
  {
    "arguments": [],
    "instruction": "loopEnd",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 9,
  },
]
`;

exports[`call float64-returning function > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (type (;1;) (func (param i32) (result i32)))
  (type (;2;) (func (param i32 i32) (result i32)))
  (type (;3;) (func (result f64)))
  (import "js" "memory" (memory (;0;) 1 1))
  (func (;0;) (type 0)
    call 6)
  (func (;1;) (type 0)
    call 5)
  (func (;2;) (type 0))
  (func (;3;) (type 0)
    (local i32)
    i32.const 128
    local.set 0
    loop  ;; label = @1
      call 1
      local.get 0
      i32.const 1
      i32.sub
      local.set 0
      local.get 0
      br_if 0 (;@1;)
    end)
  (func (;4;) (type 3) (result f64)
    f64.const 0x1.921fb54442d11p+1 (;=3.14159;)
    f64.const 0x1p+1 (;=2;)
    f64.mul)
  (func (;5;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          i32.const 16
          i32.const 3
          i32.store
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 8
        call 4
        f64.store
        br 0 (;@2;)
      end
    end)
  (func (;6;) (type 0)
    i32.const 16
    i32.const -1
    i32.store)
  (export "init" (func 0))
  (export "cycle" (func 1))
  (export "initOnly" (func 2))
  (export "buffer" (func 3)))
"
`;

exports[`call float64-returning function > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__loopErrorSignaler": {
    "byteAddress": 16,
    "default": -1,
    "elementWordSize": 4,
    "id": "__loopErrorSignaler",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 4,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 8,
    "default": 0,
    "elementWordSize": 8,
    "id": "output",
    "isFloat64": true,
    "isInteger": false,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "float64",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 3,
  },
}
`;

exports[`call function multiple times > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [],
    "instruction": "loop",
    "lineNumber": 3,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "getTwo",
      },
    ],
    "instruction": "call",
    "lineNumber": 5,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "getThree",
      },
    ],
    "instruction": "call",
    "lineNumber": 6,
  },
  {
    "arguments": [],
    "instruction": "add",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 8,
  },
  {
    "arguments": [],
    "instruction": "loopEnd",
    "lineNumber": 9,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 11,
  },
]
`;

exports[`call function multiple times > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (type (;1;) (func (param i32) (result i32)))
  (type (;2;) (func (param i32 i32) (result i32)))
  (type (;3;) (func (result i32)))
  (import "js" "memory" (memory (;0;) 1 1))
  (func (;0;) (type 0)
    call 7)
  (func (;1;) (type 0)
    call 6)
  (func (;2;) (type 0))
  (func (;3;) (type 0)
    (local i32)
    i32.const 128
    local.set 0
    loop  ;; label = @1
      call 1
      local.get 0
      i32.const 1
      i32.sub
      local.set 0
      local.get 0
      br_if 0 (;@1;)
    end)
  (func (;4;) (type 3) (result i32)
    i32.const 2)
  (func (;5;) (type 3) (result i32)
    i32.const 3)
  (func (;6;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          i32.const 8
          i32.const 3
          i32.store
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 4
        call 4
        call 5
        i32.add
        i32.store
        br 0 (;@2;)
      end
    end)
  (func (;7;) (type 0)
    i32.const 8
    i32.const -1
    i32.store)
  (export "init" (func 0))
  (export "cycle" (func 1))
  (export "initOnly" (func 2))
  (export "buffer" (func 3)))
"
`;

exports[`call function multiple times > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__loopErrorSignaler": {
    "byteAddress": 8,
    "default": -1,
    "elementWordSize": 4,
    "id": "__loopErrorSignaler",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
}
`;

exports[`call function with parameter > if the generated AST, WAT and memory map match the snapshot 1`] = `
[
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "test",
      },
    ],
    "instruction": "module",
    "lineNumber": 0,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "int",
    "lineNumber": 1,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "output",
      },
    ],
    "instruction": "int",
    "lineNumber": 2,
  },
  {
    "arguments": [],
    "instruction": "loop",
    "lineNumber": 4,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "&output",
      },
    ],
    "instruction": "push",
    "lineNumber": 5,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "input",
      },
    ],
    "instruction": "push",
    "lineNumber": 6,
  },
  {
    "arguments": [
      {
        "type": "identifier",
        "value": "double",
      },
    ],
    "instruction": "call",
    "lineNumber": 7,
  },
  {
    "arguments": [],
    "instruction": "store",
    "lineNumber": 8,
  },
  {
    "arguments": [],
    "instruction": "loopEnd",
    "lineNumber": 9,
  },
  {
    "arguments": [],
    "instruction": "moduleEnd",
    "lineNumber": 11,
  },
]
`;

exports[`call function with parameter > if the generated AST, WAT and memory map match the snapshot 2`] = `
"(module
  (type (;0;) (func))
  (type (;1;) (func (param i32) (result i32)))
  (type (;2;) (func (param i32 i32) (result i32)))
  (type (;3;) (func (param i32) (result i32)))
  (import "js" "memory" (memory (;0;) 1 1))
  (func (;0;) (type 0)
    call 6)
  (func (;1;) (type 0)
    call 5)
  (func (;2;) (type 0))
  (func (;3;) (type 0)
    (local i32)
    i32.const 128
    local.set 0
    loop  ;; label = @1
      call 1
      local.get 0
      i32.const 1
      i32.sub
      local.set 0
      local.get 0
      br_if 0 (;@1;)
    end)
  (func (;4;) (type 3) (param i32) (result i32)
    local.get 0
    i32.const 2
    i32.mul)
  (func (;5;) (type 0)
    (local i32)
    i32.const 0
    local.set 0
    block  ;; label = @1
      loop  ;; label = @2
        local.get 0
        i32.const 1000
        i32.ge_s
        if  ;; label = @3
          i32.const 12
          i32.const 4
          i32.store
          br 2 (;@1;)
        end
        local.get 0
        i32.const 1
        i32.add
        local.set 0
        i32.const 8
        i32.const 4
        i32.load
        call 4
        i32.store
        br 0 (;@2;)
      end
    end)
  (func (;6;) (type 0)
    i32.const 12
    i32.const -1
    i32.store)
  (export "init" (func 0))
  (export "cycle" (func 1))
  (export "initOnly" (func 2))
  (export "buffer" (func 3)))
"
`;

exports[`call function with parameter > if the generated AST, WAT and memory map match the snapshot 3`] = `
{
  "__loopErrorSignaler": {
    "byteAddress": 12,
    "default": -1,
    "elementWordSize": 4,
    "id": "__loopErrorSignaler",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 3,
    "wordAlignedSize": 1,
  },
  "input": {
    "byteAddress": 4,
    "default": 0,
    "elementWordSize": 4,
    "id": "input",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 1,
    "wordAlignedSize": 1,
  },
  "output": {
    "byteAddress": 8,
    "default": 0,
    "elementWordSize": 4,
    "id": "output",
    "isInteger": true,
    "isPointer": false,
    "isPointingToInteger": false,
    "isPointingToPointer": false,
    "isUnsigned": false,
    "numberOfElements": 1,
    "type": "int",
    "wordAlignedAddress": 2,
    "wordAlignedSize": 1,
  },
}
`;
